--- a/index.html
+++ b/index.html
@@ -4,9 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="style.css">
     <title>Keeep clone</title>
 </head>
 <body>
+<nav>
+    <div class="logo-area">
+        <div class="tooltip">
+          <span class="material-icons-outlined hover">menu</span>
+          <span class="tooltip-text">Main Menu</span>
+        </div>
+        <img
+        class="gb_uc gb_7d"
+        src="https://www.gstatic.com/images/branding/product/1x/keep_2020q4_48dp.png"
+        srcset="
+          https://www.gstatic.com/images/branding/product/1x/keep_2020q4_48dp.png 1x,
+          https://www.gstatic.com/images/branding/product/2x/keep_2020q4_48dp.png 2x
+        "
+        alt=""
+        aria-hidden="true"
+        style="width: 40px; height: 40px;"
+      />
+      <span class="logo-text">Keep</span>
+        <!-- end of logo area -->
+      </div>
+      <div class="search-area">
+        <div class="tooltip">
+            <span class="material-icons-outlined hover">search</span>
+            <span class="tooltip-text">Search</span>
+          </div>
+        <input type="text" placeholder="Search" />
+
+        <!-- end of search-area-->
+      </div>
+
+    <div class="settings-area">
+        <div class="tooltip">
+            <span class="material-icons-outlined hover">refresh</span>
+            <span class="tooltip-text">Refresh</span>
+
+        <!-- end of tooltip -->
+        </div>
+
+        <div class="tooltip">
+            <span class="material-icons-outlined hover">view_agenda</span>
+            <span class="tooltip-text">List View</span>
+        <!-- end of tooltip -->
+        </div>
+
+        <div class="tooltip">
+            <span class="material-icons-outlined hover">settings</span>
+            <span class="tooltip-text">Settings</span>
+        <!-- end of tooltip -->
+        </div>
+
+        <div class="profile-actions-area">
+            <div class="tooltip">
+              <span class="material-icons-outlined hover">apps</span>
+              <span class="tooltip-text">Apps</span>
+        <!-- end of tooltip -->      
+        </div>
+
+        <div class="tooltip">
+            <span class="material-icons-outlined hover">account_circle</span>
+            <span class="tooltip-text">Account</span>
+         <!-- end of tooltip -->    
+        </div>
+
+     <!-- end of settings-area-->   
+    </div>
+</nav>
+
+<!-- End of nav section -->
+
+
+
 
     
 </body>
