--- a/index.html
+++ b/index.html
@@ -115,6 +115,31 @@
   <!-- main section-->
 </main>
 
+  <div class="form-container">
+    <form>
+
+      <input class="note-text" type="text" placeholder="Take a note..." />
+      <div class="form-actions">
+        <div class="tooltip">
+          <span class="material-icons-outlined hover">check_box</span>
+          <span class="tooltip-text">New List</span>
+        </div>
+
+        <div class="tooltip">
+          <span class="material-icons-outlined hover">brush</span>
+          <span class="tooltip-text">New Drawing</span>
+        </div>
+
+        <div class="tooltip">
+          <span class="material-icons-outlined hover">image</span>
+          <span class="tooltip-text">New Image</span>
+        </div>
+        <!--  end of form-container -->
+        </div>
+    </form>
+
+  <!-- end of form-container -->
+  </div>
 
     
 </body>
