--- a/index.html
+++ b/index.html
@@ -141,6 +141,35 @@
   <!-- end of form-container -->
   </div>
 
+  <div class="form-container active-form">
+
+    <form>
+
+      <input type="text" class="note-title" placeholder="Title" />
+      <input class="note-text" type="text" placeholder="Take a note..." />
+
+      <div class="form-actions">
+        <div class="tooltip">
+          <span class="material-icons-outlined hover">check_box</span>
+          <span class="tooltip-text">New List</span>
+        </div>
+
+        <div class="tooltip">
+          <span class="material-icons-outlined hover">brush</span>
+          <span class="tooltip-text">New Drawing</span>
+        </div>
+
+        <div class="tooltip">
+          <span class="material-icons-outlined hover">image</span>
+          <span class="tooltip-text">New Image</span>
+        </div>
+        <!-- end of form-actions -->
+        </div>
+    </form>
+    
+    <!-- end of form-container active-form-->
+  </div>
+
     
 </body>
 </html>
